{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 26,
  "lineage": "ec3fd22c-7b4c-fd0e-bb1f-3452af5e8619",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:internet-gateway/igw-08db47847e4086bec",
            "id": "igw-08db47847e4086bec",
            "owner_id": "755220028039",
            "tags": {
              "Name": "My_igw"
            },
            "tags_all": {
              "Name": "My_igw"
            },
            "vpc_id": "vpc-04362f2396925885f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:loadbalancer/app/myapp-private-alb/5edcd4d943abcbc3",
            "arn_suffix": "app/myapp-private-alb/5edcd4d943abcbc3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-myapp-private-alb-1803142007.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:755220028039:loadbalancer/app/myapp-private-alb/5edcd4d943abcbc3",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-private-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d0cf8b2a9c894c5e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a2d1b8be29d6bd2"
              },
              {
                "subnet_id": "subnet-0f2ee655e675620ef"
              }
            ],
            "subnets": [
              "subnet-03a2d1b8be29d6bd2",
              "subnet-0f2ee655e675620ef"
            ],
            "vpc_id": "vpc-04362f2396925885f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.lb_sg",
            "module.subnets.aws_subnet.private_subnet_az1",
            "module.subnets.aws_subnet.private_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:loadbalancer/app/myapp-public-alb/3e5fc12ed88c0d5a",
            "arn_suffix": "app/myapp-public-alb/3e5fc12ed88c0d5a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "myapp-public-alb-974136582.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:755220028039:loadbalancer/app/myapp-public-alb/3e5fc12ed88c0d5a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-public-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d0cf8b2a9c894c5e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a5df2989bc53c305"
              },
              {
                "subnet_id": "subnet-0d466498c78e54aaf"
              }
            ],
            "subnets": [
              "subnet-0a5df2989bc53c305",
              "subnet-0d466498c78e54aaf"
            ],
            "vpc_id": "vpc-04362f2396925885f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.lb_sg",
            "module.subnets.aws_subnet.public_subnet_az1",
            "module.subnets.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:listener/app/myapp-private-alb/5edcd4d943abcbc3/f7a58c7ef24fe0ff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:targetgroup/myapp-private-tg/96d2bef7a2dbde4d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:755220028039:listener/app/myapp-private-alb/5edcd4d943abcbc3/f7a58c7ef24fe0ff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:loadbalancer/app/myapp-private-alb/5edcd4d943abcbc3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancers.aws_lb.private_alb",
            "module.load_balancers.aws_lb_target_group.private_tg",
            "module.security_groups.aws_security_group.lb_sg",
            "module.subnets.aws_subnet.private_subnet_az1",
            "module.subnets.aws_subnet.private_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:listener/app/myapp-public-alb/3e5fc12ed88c0d5a/4f8e56fe12ad46ff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:targetgroup/myapp-public-tg/2feee0af5b2dbef6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:755220028039:listener/app/myapp-public-alb/3e5fc12ed88c0d5a/4f8e56fe12ad46ff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:loadbalancer/app/myapp-public-alb/3e5fc12ed88c0d5a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancers.aws_lb.public_alb",
            "module.load_balancers.aws_lb_target_group.public_tg",
            "module.security_groups.aws_security_group.lb_sg",
            "module.subnets.aws_subnet.public_subnet_az1",
            "module.subnets.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:targetgroup/myapp-private-tg/96d2bef7a2dbde4d",
            "arn_suffix": "targetgroup/myapp-private-tg/96d2bef7a2dbde4d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:755220028039:targetgroup/myapp-private-tg/96d2bef7a2dbde4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myapp-private-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04362f2396925885f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:755220028039:targetgroup/myapp-public-tg/2feee0af5b2dbef6",
            "arn_suffix": "targetgroup/myapp-public-tg/2feee0af5b2dbef6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:755220028039:targetgroup/myapp-public-tg/2feee0af5b2dbef6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myapp-public-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04362f2396925885f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078866a7dab678025",
            "arn": "arn:aws:ec2:us-east-1:755220028039:elastic-ip/eipalloc-078866a7dab678025",
            "domain": "vpc",
            "id": "eipalloc-078866a7dab678025",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-168-109.compute-1.amazonaws.com",
            "public_ip": "3.232.168.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_nat_eip"
            },
            "tags_all": {
              "Name": "my_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.route_table.aws_route_table.my_route_table",
            "module.route_table.aws_route_table_association.public_az1",
            "module.route_table.aws_route_table_association.public_az2",
            "module.subnets.aws_subnet.public_subnet_az1",
            "module.subnets.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078866a7dab678025",
            "association_id": "eipassoc-0a7fc90797b83e6f9",
            "connectivity_type": "public",
            "id": "nat-04db87cd7a2202ea0",
            "network_interface_id": "eni-0e68e1aa90aa4193d",
            "private_ip": "10.0.1.35",
            "public_ip": "3.232.168.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d466498c78e54aaf",
            "tags": {
              "Name": "my_nat_gw"
            },
            "tags_all": {
              "Name": "my_nat_gw"
            }
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.private_route_table.aws_eip.nat_eip",
            "module.route_table.aws_route_table.my_route_table",
            "module.route_table.aws_route_table_association.public_az1",
            "module.route_table.aws_route_table_association.public_az2",
            "module.subnets.aws_subnet.public_subnet_az1",
            "module.subnets.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:route-table/rtb-01e65ac1bc965535d",
            "id": "rtb-01e65ac1bc965535d",
            "owner_id": "755220028039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04db87cd7a2202ea0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_nat_route_table"
            },
            "tags_all": {
              "Name": "my_nat_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04362f2396925885f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.private_route_table.aws_eip.nat_eip",
            "module.private_route_table.aws_nat_gateway.nat_gw",
            "module.route_table.aws_route_table.my_route_table",
            "module.route_table.aws_route_table_association.public_az1",
            "module.route_table.aws_route_table_association.public_az2",
            "module.subnets.aws_subnet.public_subnet_az1",
            "module.subnets.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed72cc30d168ba7",
            "route_table_id": "rtb-01e65ac1bc965535d",
            "subnet_id": "subnet-0f2ee655e675620ef"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.private_route_table.aws_eip.nat_eip",
            "module.private_route_table.aws_nat_gateway.nat_gw",
            "module.private_route_table.aws_route_table.nat_route_table",
            "module.route_table.aws_route_table.my_route_table",
            "module.route_table.aws_route_table_association.public_az1",
            "module.route_table.aws_route_table_association.public_az2",
            "module.subnets.aws_subnet.private_subnet_az1",
            "module.subnets.aws_subnet.public_subnet_az1",
            "module.subnets.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0adc39656187d10",
            "route_table_id": "rtb-01e65ac1bc965535d",
            "subnet_id": "subnet-03a2d1b8be29d6bd2"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.private_route_table.aws_eip.nat_eip",
            "module.private_route_table.aws_nat_gateway.nat_gw",
            "module.private_route_table.aws_route_table.nat_route_table",
            "module.route_table.aws_route_table.my_route_table",
            "module.route_table.aws_route_table_association.public_az1",
            "module.route_table.aws_route_table_association.public_az2",
            "module.subnets.aws_subnet.private_subnet_az2",
            "module.subnets.aws_subnet.public_subnet_az1",
            "module.subnets.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:route-table/rtb-0ef81dfc8180815db",
            "id": "rtb-0ef81dfc8180815db",
            "owner_id": "755220028039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08db47847e4086bec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My_Route_Table"
            },
            "tags_all": {
              "Name": "My_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04362f2396925885f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaf5b37c793b701c",
            "route_table_id": "rtb-0ef81dfc8180815db",
            "subnet_id": "subnet-0d466498c78e54aaf"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.route_table.aws_route_table.my_route_table",
            "module.subnets.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a2439926be31228",
            "route_table_id": "rtb-0ef81dfc8180815db",
            "subnet_id": "subnet-0a5df2989bc53c305"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.route_table.aws_route_table.my_route_table",
            "module.subnets.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:security-group/sg-0bd3dab8768bef950",
            "description": "Allow HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd3dab8768bef950",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security_Group_of_Instances",
            "name_prefix": "",
            "owner_id": "755220028039",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04362f2396925885f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:security-group/sg-0d0cf8b2a9c894c5e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0cf8b2a9c894c5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "755220028039",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04362f2396925885f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:subnet/subnet-0f2ee655e675620ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2ee655e675620ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755220028039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet_az1"
            },
            "tags_all": {
              "Name": "my_private_subnet_az1"
            },
            "vpc_id": "vpc-04362f2396925885f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:subnet/subnet-03a2d1b8be29d6bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a2d1b8be29d6bd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755220028039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet_az2"
            },
            "tags_all": {
              "Name": "my_private_subnet_az2"
            },
            "vpc_id": "vpc-04362f2396925885f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:subnet/subnet-0d466498c78e54aaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d466498c78e54aaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755220028039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet_az1"
            },
            "tags_all": {
              "Name": "my_public_subnet_az1"
            },
            "vpc_id": "vpc-04362f2396925885f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:subnet/subnet-0a5df2989bc53c305",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5df2989bc53c305",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755220028039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet_az2"
            },
            "tags_all": {
              "Name": "my_public_subnet_az2"
            },
            "vpc_id": "vpc-04362f2396925885f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755220028039:vpc/vpc-04362f2396925885f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1c845c411fd0a4f",
            "default_route_table_id": "rtb-061bf2b344e4f3846",
            "default_security_group_id": "sg-0299a1fd21dbda5c0",
            "dhcp_options_id": "dopt-089b88803ee6e9a99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04362f2396925885f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061bf2b344e4f3846",
            "owner_id": "755220028039",
            "tags": {
              "Name": "My_VPC"
            },
            "tags_all": {
              "Name": "My_VPC"
            }
          }
        }
      ]
    }
  ]
}